--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
@@ -56,7 +56,7 @@ Mais est-ce qu'un dev React moderne peut facilement utiliser tout ça? Lit propo
 
 ---
 
-- 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
+- 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
 - 👀 [Remix PR - Add experimental Vite support](https://github.com/remix-run/remix/pull/7590)
 - 👀 [Remix PR - Add startViewTransition support](https://github.com/remix-run/react-router/pull/10916)
 - 👀 [Next.js PR - Document Server Actions `.bind` method](https://github.com/vercel/next.js/pull/56164): la [doc Next.js](https://nextjs.org/docs/app/api-reference/functions/server-actions#binding-arguments) recommande maintenant d'utiliser `myAction.bind(null, myArg)` pour passer des arguments supplémentaires à une Server Action. La fonction retournée sera alors également une Server Action.
