--- a/website/newsletter/162/index.mdx
+++ b/website/newsletter/162/index.mdx
@@ -57,20 +57,20 @@ But can a modern React dev use all this easily? Lit offers experimental packages
 - 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
 - 👀 [Remix PR - Add experimental Vite support](https://github.com/remix-run/remix/pull/7590)
 - 👀 [Remix PR - Add startViewTransition support](https://github.com/remix-run/react-router/pull/10916)
-- 👀 [Next.js PR - Document Server Actions `.bind` method](https://github.com/vercel/next.js/pull/56164): la [doc Next.js](https://nextjs.org/docs/app/api-reference/functions/server-actions#binding-arguments) recommande maintenant d'utiliser `myAction.bind(null, myArg)` pour passer des arguments supplémentaires à une Server Action. La fonction retournée sera alors également une Server Action.
-- 📜 [UI Composition - AKA taking a step back to take a step forward](https://kyleshevlin.com/ui-composition): article qui présente un exemple de composant Card qui a trop de responsabilité. Propose de le splitter et d'utiliser la composition pour le rendre plus maintenable.
-- 📜 [Server-side pagination with Remix](https://www.jacobparis.com/content/remix-pagination): j'ai trouvé cette implémentation de pagination très intéressante, sans aucun listener `onClick` ni JS pour manipuler la query string. Repose uniquement sur le comportement natif des forms et donc compatible progressive enhancement. Ma réserve: impossible d'ouvrir une page dans un nouvel onglet 😅. https://twitter.com/sebastienlorber/status/1712118722578559162
-- 📜 [Access the Loader Data in Remix](https://sergiodxa.com/tutorials/access-loaders-data-in-remix): présente différentes manières d'utiliser `useLoaderData` ou `useRouteLoaderData` et leurs tradeoffs, en fonction d'où on les utilise.
+- 👀 [Next.js PR - Document Server Actions `.bind` method](https://github.com/vercel/next.js/pull/56164): the [Next.js doc](https://nextjs.org/docs/app/api-reference/functions/server-actions#binding-arguments) now recommends using `myAction.bind(null, myArg)` to pass additional arguments to a Server Action. The returned function will then also be a Server Action.
+- 📜 [UI Composition - AKA taking a step back to take a step forward](https://kyleshevlin.com/ui-composition): article presenting an example of a Card component that has too much responsibility. Suggests splitting it and using composition to make it more maintainable.
+- 📜 [Server-side pagination with Remix](https://www.jacobparis.com/content/remix-pagination): I found this implementation very interesting, with no `onClick` listener or JS to manipulate the query string. It relies solely on the native behaviour of forms and is therefore compatible with progressive enhancement. My reservation: impossible to open a page in a new tab 😅.
+- 📜 [Access the Loader Data in Remix](https://sergiodxa.com/tutorials/access-loaders-data-in-remix): presents different ways of using `useLoaderData` or `useRouteLoaderData` and their tradeoffs, depending on where they are used.
 - 📜 [Why I love Remix, And why you should too](https://alemtuzlak.hashnode.dev/why-i-love-remix)
 - 📜 [Making React Apps Memory Efficient - Million.js Beyond Speed](https://dev.to/ricardonunezio/millionjs-beyond-speed-making-react-apps-memory-efficient-2amn)
 - 📜 [Test your React Libraries Locally with Yalc](https://www.propelauth.com/post/test-your-react-libraries-with-yalc)
 - 📜 [Why we still use React HOCs](https://www.propelauth.com/post/why-we-have-both-react-hooks-and-hocs)
 - 📜 [Progressively Enhanced WebGL Lens Refraction](https://tympanus.net/codrops/2023/10/10/progressively-enhanced-webgl-lens-refraction/)
-- 📦 [Fresh v1.5 - Partials, client side navigation and more](https://deno.com/blog/fresh-1.5): le framework Preact implémente une navigation client-side basée sur des "Partials" qui permet de préserver le state lors des navigations. Le support View Transitions arrive.
-- 📦 [next-safe-action v4 - Typesafe Server Actions in your Next.js 13 app](https://next-safe-action.dev/): validation des inputs avec Zod. Note: un projet similaire [Zact](https://github.com/pingdotgg/zact) est déprécié au profit de `next-safe-action`.
-- 📦 [Astro Starlight v0.11](https://github.com/withastro/starlight/releases/tag/%40astrojs%2Fstarlight%400.11.0): ajoute le support des [component overrides](https://starlight.astro.build/guides/overriding-components/) https://twitter.com/astrodotbuild/status/1711391413630329009
-- 📦 [React-Query 5.0.0 RC.10](https://github.com/TanStack/query/releases/tag/v5.0.0-rc.10): les dernières RCs apportent des améliorations notables [🐦 devtools](https://twitter.com/TkDodo/status/1711297673934848388) et [🐦 TypeScript](https://twitter.com/TkDodo/status/1711635656642855297).
-- 🔗 [ServerComponents.dev](https://servercomponents.dev/): une resource interactive sympa pour en savoir plus sur les Server Components.
+- 📦 [Fresh v1.5 - Partials, client side navigation and more](https://deno.com/blog/fresh-1.5): the Preact framework implements client-side navigation based on "Partials", which permits to preserve some state during navigation. View Transitions support is on the way.
+- 📦 [next-safe-action v4 - Typesafe Server Actions in your Next.js 13 app](https://next-safe-action.dev/): input validation with Zod. Note: a similar project [Zact](https://github.com/pingdotgg/zact) is deprecated in favour of `next-safe-action`.
+- 📦 [Astro Starlight v0.11](https://github.com/withastro/starlight/releases/tag/%40astrojs%2Fstarlight%400.11.0): adds support for [component overrides](https://starlight.astro.build/guides/overriding-components/) to customize docs.
+- 📦 [React-Query 5.0.0 RC.10](https://github.com/TanStack/query/releases/tag/v5.0.0-rc.10): the latest RCs bring significant improvements to [🐦 devtools](https://twitter.com/TkDodo/status/1711297673934848388) and [🐦 TypeScript](https://twitter.com/TkDodo/status/1711635656642855297).
+- 🔗 [ServerComponents.dev](https://servercomponents.dev/): a fun interactive resource to find out more about Server Components.
 - 🎥 [What's new in Remotion – September 2023](https://www.youtube.com/watch?v=Ol-571DOPDY)
 - 📅 [React Jam - October 19-29th - React devs create and play games in 10 days](https://reactjam.com/)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (London 🇬🇧, Octobre 20-23) is offering us [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
@@ -107,22 +107,22 @@ Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/qu
 
 [**Using RCTView & RCTText in React Native for Performance Gains**](https://blog.theodo.com/2023/10/native-views-rn-performance/)
 
-En ce moment, les devs React-Native discutent beaucoup [sur Twitter](https://twitter.com/FernandoTheRojo/status/1707762822015267219) de la perf des composants `Text` et `View`, qui sont des wrappers JS et rajoutent de l'overhead par rapport aux éléments natifs `RCTText` et `RCTView`. William Candillon avait déjà 🎥 [reporté ce problème](https://www.youtube.com/watch?v=1D78Tc46Xqo&t=1156s) dès 2021, et la possibilité d'optimiser, ce qu'il est possible de faire à condition de se priver de quelques features comme les listeners `onPress`. Ce benchmark propose de mesurer l'impact d'utiliser les composants natifs à la place des composants officiels, et reporte un gain d'environ 15%, avec des variations selon la plateforme.
+At the moment, React-Native devs are talking a lot [on Twitter](https://twitter.com/FernandoTheRojo/status/1707762822015267219) about the perf of the `Text` and `View` components, which are JS wrappers and add overhead compared to the respective native `RCTText` and `RCTView` elements. William Candillon had already 🎥 [explained this problem](https://www.youtube.com/watch?v=1D78Tc46Xqo&t=1156s) in 2021, with the possibility of optimising Text rendering. It is possible to optimize as long as you don't need a few features like `onPress` listeners. This article presents a benchmark and measures the impact of using the native components instead of regular components, and reports a gain of around 15%, with variations depending on the platform and architecture.
 
-Maintenant que cette astuce s'est répandue, les devs React-Native ont bien envie d'en profiter. On peut noter la création de [react-native-fast-text](https://github.com/peterpme/react-native-fast-text), ou encore le POC d'un plugin Babel [react-native-optimizer](https://github.com/marklawlor/react-native-optimizer) qui appliquerait cette optimisation automatiquement.
+Now that this trick became mainstream, React-Native devs are keen to take advantage of it. We can note the creation of [react-native-fast-text](https://github.com/peterpme/react-native-fast-text), or the POC of a Babel plugin [react-native-optimizer](https://github.com/marklawlor/react-native-optimizer) which would apply this optimisation automatically.
 
 ---
 
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
 - 🐦 [Expo docs updates - Bun, local dev, iOS capabilities...](https://twitter.com/amanhimself/status/1710254359274037263)
-- 📜 [How to measure React Native performance with Flashlight](https://www.bam.tech/article/measuring-react-native-performance-with-flashlight): montre un exemple d'utilisation de Flashlight pour comparer les performances au scroll de FlatList et Flashlist sur Android. On peut utiliser des commandes ADB ou Maestro pour simuler le scroll.
-- 📜 [Remote controls for React TV apps: a declarative approach with react-tv-space-navigation 1.0!](https://www.bam.tech/article/handling-remote-controls-in-tv-apps-the-react-way-with-react-tv-space-navigation-1-0): les devs BAM ont créé [react-tv-space-navigation](https://github.com/bamlab/react-tv-space-navigation), une solution de navigation spatiale cross-platform, agnostique, qui fonctionne sur les apps TV en React, aussi bien web que natives.
-- 📦 [React-Native v0.73 RC.2](https://github.com/facebook/react-native/releases/tag/v0.73.0-rc.2): la v0.73 vient de passer en RC. Il faudra regarder la [🎥 Keynote React-Native-EU](https://www.youtube.com/watch?v=-rCRgbsJumk) pour connaitre les highlights. On y trouve entre autre one-click debug flow et stable symlinks support! https://twitter.com/sebastienlorber/status/1712090409919242555
+- 📜 [How to measure React Native performance with Flashlight](https://www.bam.tech/article/measuring-react-native-performance-with-flashlight): shows an example of using Flashlight to compare the scrolling performance of FlatList and Flashlist on Android. You can use ADB or Maestro commands to simulate scrolling.
+- 📜 [Remote controls for React TV apps: a declarative approach with react-tv-space-navigation 1.0!](https://www.bam.tech/article/handling-remote-controls-in-tv-apps-the-react-way-with-react-tv-space-navigation-1-0): details leading to the creation of [react-tv-space-navigation](https://github.com/bamlab/react-tv-space-navigation), a cross-platform, agnostic spatial navigation solution that works on React TV apps, both web-based and native.
+- 📦 [React-Native v0.73 RC.2](https://github.com/facebook/react-native/releases/tag/v0.73.0-rc.2): v0.73 has just been released in RC. You'll have to check out the [🎥 Keynote at React-Native-EU](https://www.youtube.com/watch?v=-rCRgbsJumk) to see all the highlights. These include one-click debug flow and stable symlinks support! https://twitter.com/sebastienlorber/status/1712090409919242555
 - 📦 [vxrn - The magic of Vite, meet React Native](https://vxrn.dev/): nouveau projet expérimental qui propose d'utiliser Vite pour le développement cross-platform web/mobile, à l'instar d'Expo qui mise sur Metro. https://twitter.com/natebirdman/status/1710084813179474106
 - 📦 [Vision-Camera 3.3 - QR-code/Barcode scanner](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.3.0)
 - 📦 [Vision-Camera-Barcode-Scanner](https://github.com/mgcrea/vision-camera-barcode-scanner)
 - 📦 [Create-Expo-Stack CLI v2](https://expostack.dev/) https://twitter.com/DanStepanov/status/1711881578295726149
-- 🎥 [Back to the Web](https://www.youtube.com/watch?v=3p3NI1yIgcM): William Candillon dévoile un polyfill expérimental pour Skia `canvaskit-js` qui permet de faire tourner React-Native-Skia sur le web en seulement 20kb, au lieu de 3mb! Les demos Flutter tournent déjà plutôt bien avec. On peut l'utiliser dans une app Create-React-App sans dépendre de React-Native-Web.
+- 🎥 [Back to the Web](https://www.youtube.com/watch?v=3p3NI1yIgcM): William Candillon unveils an experimental polyfill for Skia `canvaskit-js` that lets you run React-Native-Skia on the web in just 20kb, instead of 3mb! Flutter demos already run pretty well with it. You can use it in a Create-React-App without depending on React-Native-Web.
 - 🎥 [What’s the Best React Native Storage Option?](https://www.youtube.com/watch?v=wVNPmxntwKQ)
 - 🎙️ [React-Native-Radio 277 - Expo Launch Party](https://reactnativeradio.com/episodes/rnr-277-expo-launch-party)
 - 🎙 [The React Native Show Podcast 28 - Improving Developer Experience with Expo](https://www.youtube.com/watch?v=4PPDAvgfLHk)
